# logtime

./: Cargo.toml  README.md
migrations/2020-07-24-032105_initial_schema/: down.sql  up.sql
migrations/2020-07-29-040636_add_distinct_indices/: down.sql  up.sql
migrations/2020-07-30-020021_add_number_to_subtask/: down.sql  up.sql
shell_integration/: logtime.fish  logtime.zsh
src/: logtimedb.rs  main.rs  models.rs  schema.patch  schema.rs
src/commands/: mod.rs
src/shell/: fish.rs  mod.rs  zsh.rs
