[package]
name = "logtime"
version = "0.1.1"
authors = ["Jeremy List <quick.dudley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6"
diesel = { version = "1.4.8", features = ["sqlite"] }
diesel_migrations = "1.4.0"

