[package]
name = "logtime"
version = "0.1.1"
authors = ["Jeremy List <quick.dudley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.9"
diesel = { version = "2.2", features = ["sqlite"] }
diesel_migrations = "2.2"

